--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -16,9 +16,9 @@ collections:
     fields: # The fields for each document, usually in front matter
       # - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Description", name: "description", widget: "string"}
+      - {label: "Description", name: "description", widget: "string", required: false}
       - {label: "ServiceType", name: "type", widget: "select",  options: ["indoor", "external"]}
-      - {label: "CoverImage", name: "image", widget: "image"}
+      - {label: "CoverImage", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
       
   - name: "sectors" # Used in routes, e.g., /admin/collections/blog
@@ -29,6 +29,6 @@ collections:
     fields: # The fields for each document, usually in front matter
       # - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Description", name: "description", widget: "string"}
-      - {label: "CoverImage", name: "image", widget: "image"}
+      - {label: "Description", name: "description", widget: "string", required: false}
+      - {label: "CoverImage", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
