--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,7 +14,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      # - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Order", name: "order", widget: "number", required: false}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "string", required: false}
       - {label: "ServiceType", name: "type", widget: "select",  options: ["indoor", "external"]}
@@ -27,7 +27,7 @@ collections:
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      # - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Order", name: "order", widget: "number", required: false}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "string", required: false}
       - {label: "CoverImage", name: "image", widget: "image", required: false}
