--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -16,7 +16,8 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Order", name: "order", widget: "number", required: false}
       - {label: "Meta Title", name: "metaTitle", widget: "string", required: false}
-      - {label: "Meta Description",name: "metaDescription", widget: "string", pattern: ['^.{0,155}$', "155 characters maximum"], required: false}
+      - {label: "Meta Description", name: "metaDescription", widget: "string", pattern: ['^.{0,155}$', "155 characters maximum"], required: false}
+      - {label: "Meta Keywords", name: "metaKeywords", widget: "string", pattern: ['^.{0,350}$', "350 characters maximum"], required: false}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "text", required: false}
       - {label: "ServiceType", name: "type", widget: "select",  options: ["indoor", "external"]}
@@ -31,7 +32,8 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Order", name: "order", widget: "number", required: false}
       - {label: "Meta Title", name: "metaTitle", widget: "string", required: false}
-      - {label: "Meta Description",name: "metaDescription", widget: "string", pattern: ['^.{0,155}$', "155 characters maximum"], required: false}
+      - {label: "Meta Description", name: "metaDescription", widget: "string", pattern: ['^.{0,155}$', "155 characters maximum"], required: false}
+      - {label: "Meta Keywords", name: "metaKeywords", widget: "string", pattern: ['^.{0,350}$', "350 characters maximum"], required: false}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "text", required: false}
       - {label: "CoverImage", name: "image", widget: "image", required: false}
