--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -73,6 +73,7 @@ collections:
     fields:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Author", name: "author", widget: "string"}
+      - {label: "Tags", name: "tags", widget: "select", options: ["External", "Indoor", "Bathroom", "Kitchen", "Floor & Carpet", "Post-construction", "Windows", "Blind & Curtains", "Customer Satisfaction"], multiple: true, required: false}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Publish Date", name: "pubDate", widget: "datetime", format: "MMM DD YYYY"}
       - {label: "Category", name: "category", widget: "select", options: ["cleaning", "health-and-environment", "efficiency"], multiple: false}
