--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -74,6 +74,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Standfirst", name: "standFirst", widget: "text"}
       - {label: "Author", name: "author", widget: "string"}
+      - {label: "AuthorImage", name: "authorImage", widget: "image", required: false}
       - {label: "Tags", name: "tags", widget: "select", options: ["External", "Indoor", "Bathroom", "Kitchen", "Floor & Carpet", "Post-construction", "Windows", "Blind & Curtains", "Customer Satisfaction"], multiple: true, required: false}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Publish Date", name: "pubDate", widget: "datetime", format: "MMM DD YYYY"}
