--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -86,7 +86,7 @@ collections:
     label: "FAQ"
     folder: "src/content/faq"
     create: true
-    slug: "{{slug}}"
+    slug: "{{question}}"
     fields:
       - {label: "Order", name: "order", widget: "number", required: false}
       - {label: "Question", name: "question", widget: "text"}
