--- a/public/netlify.toml
+++ b/public/netlify.toml
@@ -3,3 +3,8 @@
   to = "https://cleannetwork.co.uk/:splat"
   status = 301
   force = true
+[[redirects]]
+  from = "https://www.thecleannetwork.co.uk/*"
+  to = "https://cleannetwork.co.uk/:splat"
+  status = 301
+  force = true
