--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -23,7 +23,7 @@ collections:
       - {label: "ServiceType", name: "type", widget: "select",  options: ["indoor", "external"]}
       - {label: "Cover Image", name: "image", widget: "image", required: false}
       - {label: "Hourly Price (£)", name: "hourlyPrice", widget: "number", required: false}
-      - {label: "Minimum Hours", name: "pricingMinHours", widget: "number", required: false}
+      - {label: "Minimum Hours (Weekly)", name: "minWeeklyHours", widget: "number", required: false}
       - {label: "Pricing Paragraph Intro", name: "pricingParagraphIntro", widget: "text", default: "Are you ready to elevate your office’s cleanliness to a whole new level?", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
 
@@ -41,7 +41,7 @@ collections:
       - {label: "Description", name: "description", widget: "text", required: false}
       - {label: "Cover Image", name: "image", widget: "image", required: false}
       - {label: "Hourly Price (£)", name: "hourlyPrice", widget: "number", required: false}
-      - {label: "Minimum Hours", name: "pricingMinHours", widget: "number", required: false}
+      - {label: "Minimum Hours (Weekly)", name: "minWeeklyHours", widget: "number", required: false}
       - {label: "Pricing Paragraph Intro", name: "pricingParagraphIntro", widget: "text", default: "Are you ready to elevate your office’s cleanliness to a whole new level?", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
   
