--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -24,7 +24,7 @@ collections:
       - {label: "Cover Image", name: "image", widget: "image", required: false}
       - {label: "Hourly Price (£)", name: "hourlyPrice", widget: "number", required: false}
       - {label: "Minimum Hours (Weekly)", name: "minWeeklyHours", widget: "number", required: false}
-      - {label: "Pricing Paragraph Intro", name: "pricingParagraphIntro", widget: "text", default: "Are you ready to elevate your office’s cleanliness to a whole new level?", required: false}
+      - {label: "Pricing Paragraph Intro", name: "pricingParagraphIntro", widget: "text", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
 
   - name: "sectors"
@@ -42,7 +42,7 @@ collections:
       - {label: "Cover Image", name: "image", widget: "image", required: false}
       - {label: "Hourly Price (£)", name: "hourlyPrice", widget: "number", required: false}
       - {label: "Minimum Hours (Weekly)", name: "minWeeklyHours", widget: "number", required: false}
-      - {label: "Pricing Paragraph Intro", name: "pricingParagraphIntro", widget: "text", default: "Are you ready to elevate your office’s cleanliness to a whole new level?", required: false}
+      - {label: "Pricing Paragraph Intro", name: "pricingParagraphIntro", widget: "text", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
   
   - name: "testimonials"
