--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -15,7 +15,7 @@ collections:
     slug: "{{documentTitle}}" 
     fields: 
       - {label: "Order", name: "order", widget: "number", required: false}
-      - {label: "Short Title", name: "documentTitle", widget: "string", required: false}
+      - {label: "Document Title", name: "documentTitle", widget: "string", required: false}
       - {label: "Meta Description", name: "metaDescription", widget: "string", pattern: ['^.{0,155}$', "155 characters maximum"], required: false}
       - {label: "Keywords", name: "keywords", widget: "string", pattern: ['^.{0,350}$', "350 characters maximum"], required: false}
       - {label: "Title", name: "title", widget: "string"}
@@ -34,7 +34,7 @@ collections:
     slug: "{{documentTitle}}"
     fields:
       - {label: "Order", name: "order", widget: "number", required: false}
-      - {label: "Short Title", name: "documentTitle", widget: "string", required: false}
+      - {label: "Document Title", name: "documentTitle", widget: "string", required: false}
       - {label: "Meta Description", name: "metaDescription", widget: "string", pattern: ['^.{0,155}$', "155 characters maximum"], required: false}
       - {label: "Keywords", name: "keywords", widget: "string", pattern: ['^.{0,350}$', "350 characters maximum"], required: false}
       - {label: "Title", name: "title", widget: "string"}
