--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -75,12 +75,14 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
+      - {label: "Document Title", name: "documentTitle", widget: "string", required: false}
+      - {label: "Meta Description", name: "metaDescription", widget: "string", pattern: ['^.{0,155}$', "155 characters maximum"], required: false}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "text"}
       - {label: "Standfirst", name: "standFirst", widget: "text"}
       - {label: "Author", name: "author", widget: "string"}
       - {label: "AuthorImage", name: "authorImage", widget: "image", required: false}
       - {label: "Tags", name: "tags", widget: "select", options: ["External", "Indoor", "Bathroom", "Kitchen", "Floor & Carpet", "Post-construction", "Windows", "Blind & Curtains", "Customer Satisfaction"], multiple: true, required: false}
-      - {label: "Description", name: "description", widget: "text"}
       - {label: "Publish Date", name: "pubDate", widget: "datetime", format: "MMM DD YYYY"}
       - {label: "Category", name: "category", widget: "select", options: ["cleaning", "health-and-environment", "efficiency"], multiple: false}
       - {label: "HeroImage", name: "heroImage", widget: "image"}
