--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^1.4.0",
-    "astro": "^4.1.0",
+    "astro": "^4.3.2",
     "astro-seo-schema": "^4.0.0",
-    "schema-dts": "^1.1.2"
+    "schema-dts": "^1.1.2",
+    "zod": "^3.22.4"
   }
 }
