--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^1.4.0",
-    "astro": "^4.3.2",
+    "astro": "^4.1.0",
     "astro-seo-schema": "^4.0.0",
-    "schema-dts": "^1.1.2",
-    "zod": "^3.22.4"
+    "schema-dts": "^1.1.2"
   }
 }
